# ai-assisted-development

./: .gitignore  README.md
homework-1/: .env.example  .eslintrc.json  HOWTORUN.md  PR_TEMPLATE.md  README.md  jest.config.js  package-lock.json  package.json
homework-1/demo/: run.sh  sample-data.json  (+1 more)
homework-2/: .dockerignore  .env.example  Dockerfile  HOWTORUN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
homework-2/alembic/: env.py
homework-2/alembic/versions/: 57e68b7f1239_initial_tickets_table_with_enums.py
homework-2/demo/: run.sh  sample-requests.http
homework-2/docs/: API_REFERENCE.md  ARCHITECTURE.md  TESTING_GUIDE.md
homework-2/src/: config.py  logging_config.py  main.py
homework-2/src/api/: classify.py  deps.py  import_.py  tickets.py
homework-2/src/db/: session.py
homework-2/src/models/: enums.py  ticket.py
homework-2/src/parsers/: base.py  csv_parser.py  json_parser.py  xml_parser.py
homework-2/src/schemas/: classification.py  import_.py  ticket.py
homework-2/src/services/: classification_service.py  classifier.py  importer.py  ticket_service.py
homework-2/tests/: conftest.py  test_categorization.py  test_edge_cases.py  test_import_csv.py  test_import_json.py  test_import_xml.py  test_integration.py  test_performance.py  test_ticket_api.py  test_ticket_model.py
homework-2/tests/fixtures/: invalid_tickets.csv  invalid_tickets.json  invalid_tickets.xml  sample_tickets.csv  sample_tickets.json  sample_tickets.xml
homework-3/: README.md  agents.md  specification.md
(+25 files in other folders)
